# breakingRSA

./: .gitignore  README.md  setup.py
c_implementation/src/: main.c  main.py  main.pyi
cython/src/: main.pyx
cython_implementation/src/: main.pyi  main.pyx
mypyc_implementation/src/: main.pyi
python/: main.py
python/src/: main.py
rust/: Cargo.toml
rust/src/: lib.rs  main.pyi  main.rs
src/: python_implementation.py
tests/: speed.py  unit.py
