[package]
name = "shors-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.46"
lazy_static = "1.4.0"
mod_exp = "1.0.1"
num-bigfloat = "1.7.1"

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]
